--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "concurrently": "^7.0.0",
     "cypress": "^9.4.1",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "wait-on": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pretest:cypress": "wait-on -t 30000 http-get://localhost:3000",
+    "test:cypress": "npx cypress run",
+    "test:e2e": "concurrently -p none -k --hide 0 -s first 'BROWSER=none npm start' 'npm run test:cypress'"
   },
   "eslintConfig": {
     "extends": [
